--- a/assets/styles/scss/general/_buttons.scss
+++ b/assets/styles/scss/general/_buttons.scss
@@ -34,6 +34,14 @@
 //*--------------------------------------------
 //* Boutons d'édition/suppression du dashboard
 //*--------------------------------------------
+.view-btn
+{
+  height: 1.25rem;
+  width: 3rem;
+  margin-left: 0.75rem;
+  background-color: green;
+  color: white;
+}
 .edit-btn
 {
   height: 1.25rem;
