--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -1,6 +1,7 @@
 @use 'general/header';
 @use 'general/left-aside';
 @use 'general/form';
+@use 'general/article';
 @use 'general/buttons';
 @use 'general/main';
 @use 'general/footer';
