--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -18,7 +18,7 @@
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
-                Gestion du compte. Les reglages, c'est ici!
+                Les reglages, c'est ici!
             </p>
         </div>
     </header>
