--- a/assets/styles/scss/general/_error-succes-gestion.scss
+++ b/assets/styles/scss/general/_error-succes-gestion.scss
@@ -1,3 +1,8 @@
+//*----------------------
+//* Import des variables
+//*----------------------
+@import '../general/vars';
+
 .success
 {
   color: green;
@@ -9,6 +14,10 @@
 }
 [id*="error"]
 {
+    padding: 0.6rem;
+    position: absolute;
+    border-radius: 0 16px 0 16px;
+    background: linear-gradient(to bottom, white, white, $light-blue);
     color: red;
-    font-size: 1rem;
+    font-size: 0.75rem;
 }
