--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -15,7 +15,7 @@
             </p>
         </div>
     </header>
-    <h1>Contacter l'administrateur</h1>
+    <h1>Envoyer un message</h1>
     <form action="index.php?route=contact" method="POST" id="contact_form">
         <fieldset>
             <label for="subject">Sujet</label>
